<resources>
    <string name="app_name">PersonalPhysicalTracker</string>
    <string name="title_home">Today</string>
    <string name="title_charts">Charts</string>
    <string name="title_week">WEEK</string>
    <string name="title_activities_done">ActivitiesDone</string>
    <string name="text_walking">WALKING</string>
    <string name="text_driving">DRIVING</string>
    <string name="text_standing">STANDING</string>
    <string name="text_unknown">UNKNOWN</string>
    <string name="title_settings">Settings</string>
    <string name="share">Share</string>
    <string name="allow_steps_reminder">Allow steps reminder</string>
    <string name="background_operations">Background Operations</string>
    <string name="allow_automatic_activity_recognition">Allow automatic activity recognition</string>
    <string name="allow_daily_reminder">Allow daily reminder</string>
    <string name="notification">Notification</string>
    <string name="allow_presence_detection_in_a_location">Allow presence detection in a location</string>
    <string name="shareText">SHARE</string>
    <string name="date">DATE</string>
    <string name="walkingLower">Walking</string>
    <string name="drivingLower">Driving</string>
    <string name="standingLower">Standing</string>
    <string name="nothing">Nothing</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="_12h">12h</string>
    <string name="_0h">0h</string>
    <string name="_18h">18h</string>
    <string name="_6h">6h</string>
    <string name="start_activity">Start activity</string>
    <string name="no_activity_running">No activity running</string>
    <string name="see_your_history">See your history</string>
    <string name="cancel_location">Cancel Location</string>
    <string name="do_you_need_help">Do you need help?</string>
    <string name="map">MAP</string>
    <string name="help">HELP</string>
</resources>