<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:id="@+id/fragment_settings">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:text="@string/notification"
                android:textSize="30sp"
                android:textStyle="bold">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="285dp"
                    android:layout_height="match_parent"
                    android:text="@string/allow_daily_reminder"
                    android:textAlignment="textStart"
                    android:textSize="25sp">

                </TextView>

                <Switch
                    android:id="@+id/switch_notification_daily_reminder"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="285dp"
                    android:layout_height="match_parent"
                    android:text="@string/allow_steps_reminder"
                    android:textAlignment="textStart"
                    android:textSize="25sp">

                </TextView>

                <Switch
                    android:id="@+id/switch_notification_steps_reminder"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20sp"
                android:paddingBottom="10sp"
                android:text="@string/background_operations"
                android:textSize="30sp"
                android:textStyle="bold">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="285dp"
                    android:layout_height="match_parent"
                    android:text="@string/allow_automatic_activity_recognition"
                    android:textAlignment="textStart"
                    android:textSize="25sp">

                </TextView>

                <Switch
                    android:id="@+id/switch_b_o_activity_recognition"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="285dp"
                    android:layout_height="match_parent"
                    android:text="@string/allow_presence_detection_in_a_location"
                    android:textAlignment="textStart"
                    android:textSize="25sp">

                </TextView>

                <Switch
                    android:id="@+id/switch_b_o_location"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>

            <TextView
                android:id="@+id/set_location_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Set your interests' location"
                android:clickable="true">
            </TextView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

