<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FEFEFE"
    android:id="@+id/fragment_charts">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/andika_new_basic"
            android:text="@string/date"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/chart_layout"
            android:layout_width="396dp"
            android:layout_height="276dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_date">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pie_chart"
                android:layout_width="304dp"
                android:layout_height="261dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>



        <LinearLayout
            android:id="@+id/legend_layout"
            android:layout_width="417dp"
            android:layout_height="78dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chart_layout"
            app:layout_constraintVertical_bias="0.033">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_circle"
                    android:drawableTint="@color/green_500"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/walkingLower"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_circle"
                    android:drawableTint="@color/blue_500"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/drivingLower"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_circle"
                    android:drawableTint="@color/red_500"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/standingLower"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_circle"
                    android:drawableTint="@color/grey_500"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/nothing"
                    android:textAlignment="center"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_icons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legend_layout"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:id="@+id/linear_layout_walking"
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_walking"
                    android:layout_width="75dp"
                    android:layout_height="62dp"
                    android:layout_gravity="center"
                    android:padding="16dp"
                    android:src="@drawable/icon_walking" />

                <Button
                    android:id="@+id/button_walking"
                    android:layout_width="318dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#DAFFEF"
                    android:text="@string/text_walking"
                    android:textAlignment="textStart"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_driving"
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_driving"
                    android:layout_width="72dp"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:padding="16dp"
                    android:src="@drawable/icon_driving" />

                <Button
                    android:id="@+id/button_driving"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#DAFFEF"
                    android:text="@string/text_driving"
                    android:textAlignment="textStart"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_standing"
                android:layout_width="match_parent"
                android:layout_height="105dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_STANDING"
                    android:layout_width="75dp"
                    android:layout_height="73dp"
                    android:layout_gravity="center"
                    android:padding="16dp"
                    android:src="@drawable/icon_standing" />

                <Button
                    android:id="@+id/button_standing"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#DAFFEF"
                    android:text="@string/text_standing"
                    android:textAlignment="textStart"
                    android:textColor="#000000" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
