<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_charts_walking"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FEFEFE"
    android:textAlignment="center"
    tools:context=".ui.charts.WalkingChartsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/chart_walking_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/text_range"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/select_day_walking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/day"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toTopOf="@+id/text_range"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.562" />

                <TextView
                    android:id="@+id/select_week_walking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/week"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toTopOf="@+id/text_range"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/select_day_walking"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.562" />

                <TextView
                    android:id="@+id/select_month_walking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/month"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toTopOf="@+id/text_range"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/select_week_walking"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.556" />

                <TextView
                    android:id="@+id/select_year_walking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/year"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toTopOf="@+id/text_range"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/select_month_walking"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.571" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/chart_walking_layout_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/chart_walking_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/text_range"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"
                    android:text="@string/date"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.465"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.157" />
            </LinearLayout>

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChartWalkingDuration"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:paddingBottom="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_range"
                app:layout_constraintVertical_bias="0.124">

            </com.github.mikephil.charting.charts.BarChart>

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChartWalkingSteps"
                android:layout_width="match_parent"
                android:layout_height="267dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/barChartWalkingDuration">

            </com.github.mikephil.charting.charts.BarChart>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>